Fix status issue on search clerk